# hermes-desktop-linux

./: README.md  pyproject.toml
hermes_desktop_linux/: app.py  models.py  qt_app.py  remote.py
packaging/: hermes-desktop-linux.desktop
scripts/: test.sh
tests/: test_core.py
