[project]
name = "hermes-desktop-linux"
version = "0.1.0"
description = "Native Linux desktop companion for Hermes Agent over SSH"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Adrian De Santi"}]
dependencies = ["PySide6>=6.7"]

[project.scripts]
hermes-desktop-linux = "hermes_desktop_linux.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
